a_udemy/course2/7-security/pod-with-container-security-context.yml
apiVersion: v1
kind: Pod
metadata: 
  name: web-pod
spec:
  containers:
    - name: ubuntu
      image: ubuntu
      command: ["sleep", "3600"]
      securityContext:
        runAsUser: 1000
        capabilities:    # only available at container level
          add: ["MAC_ADMIN"]
